--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
+# apple Stuff
+.DS_Store
+.AppleDouble
+.LSOverride
 #
 /[Ll]ibrary/
 /[Tt]emp/
